chore: npm publish access public

--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
       "@commitlint/config-conventional"
     ]
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "release-it": {
     "git": {
       "commitMessage": "chore: release ${version}",
