--- a/build-config/buildspec-prod.yml
+++ b/build-config/buildspec-prod.yml
@@ -6,17 +6,20 @@ phases:
   build:
     commands:
       - cd $CODEBUILD_SRC_DIR
+      - echo $NPM_TOKEN | cut -d'-' -f2-
       - VERSION=$(echo $CODEBUILD_WEBHOOK_TRIGGER | sed 's/branch\///g')
-      - sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "START" "$VERSION"
+#      - sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "START" "$VERSION"
       - echo "Installing yarn Packages..."
       - yarn bootstrap
       - echo "Yarn build and publishing to NPM"
       - yarn release --no-git --ci | tee /tmp/build.log
+      - echo ${PIPESTATUS[0]}
       - VERSION=$(grep '! npm version' /tmp/build.log | awk '{ print $4 }')
-    finally:
-      - |
-        if [ "$CODEBUILD_BUILD_SUCCEEDING" = "0" ]; then
-            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "FAILED" "$VERSION"
-        else
-            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "SUCCESS" "$VERSION"
-        fi
+      - cat /tmp/build.log
+#    finally:
+#      - |
+#        if [ "$CODEBUILD_BUILD_SUCCEEDING" = "0" ]; then
+#            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "FAILED" "$VERSION"
+#        else
+#            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "SUCCESS" "$VERSION"
+#        fi
