--- a/build-config/buildspec-prod.yml
+++ b/build-config/buildspec-prod.yml
@@ -12,10 +12,13 @@ phases:
       - echo "Installing yarn Packages..."
       - yarn bootstrap
       - echo "Yarn build and publishing to NPM"
-      - yarn release --no-git --ci | tee /tmp/build.log
-      - echo ${PIPESTATUS[0]}
-      - VERSION=$(grep '! npm version' /tmp/build.log | awk '{ print $4 }')
+      - npm set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+      - yarn release --no-git --ci --dry-run 2>&1 | tee /tmp/build.log
       - cat /tmp/build.log
+      - grep -q 'Command failed with exit code' /tmp/build.log && exit 1
+      - VERSION=$(grep '! npm version' /tmp/build.log | awk '{ print $4 }')
+      - NPM_VERSION=$(npm show @chargebee/react-native-chargebee version)
+      - echo $NPM_VERSION | grep -q $VERSION || { echo "Version between Build and NPM not matched" ; exit 1 ; }
 #    finally:
 #      - |
 #        if [ "$CODEBUILD_BUILD_SUCCEEDING" = "0" ]; then
