--- a/build-config/buildspec-prod.yml
+++ b/build-config/buildspec-prod.yml
@@ -6,23 +6,21 @@ phases:
   build:
     commands:
       - cd $CODEBUILD_SRC_DIR
-      - echo $NPM_TOKEN | cut -d'-' -f2-
       - VERSION=$(echo $CODEBUILD_WEBHOOK_TRIGGER | sed 's/branch\///g')
-#      - sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "START" "$VERSION"
+      - sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "START" "$VERSION"
       - echo "Installing yarn Packages..."
       - yarn bootstrap
       - echo "Yarn build and publishing to NPM"
       - npm set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
-      - yarn release --no-git --ci --dry-run 2>&1 | tee /tmp/build.log
-      - cat /tmp/build.log
+      - yarn release --no-git --no-git-release --ci 2>&1 | tee /tmp/build.log
       - grep -q 'Command failed with exit code' /tmp/build.log && exit 1
       - VERSION=$(grep '! npm version' /tmp/build.log | awk '{ print $4 }')
       - NPM_VERSION=$(npm show @chargebee/react-native-chargebee version)
       - echo $NPM_VERSION | grep -q $VERSION || { echo "Version between Build and NPM not matched" ; exit 1 ; }
-#    finally:
-#      - |
-#        if [ "$CODEBUILD_BUILD_SUCCEEDING" = "0" ]; then
-#            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "FAILED" "$VERSION"
-#        else
-#            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "SUCCESS" "$VERSION"
-#        fi
+    finally:
+      - |
+        if [ "$CODEBUILD_BUILD_SUCCEEDING" = "0" ]; then
+            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "FAILED" "$VERSION"
+        else
+            sh $CODEBUILD_SRC_DIR/build-config/sns_util.sh "SUCCESS" "$VERSION"
+        fi
