--- a/build-config/buildspec-prod.yml
+++ b/build-config/buildspec-prod.yml
@@ -19,8 +19,8 @@ phases:
       - yarn bootstrap
       - echo "Yarn build and publishing to NPM"
       - npm run release -- --no-git --no-github.release --ci 2>&1 | tee /tmp/build.log
-      - grep -q 'Command failed with exit code' /tmp/build.log && exit 1
-      - VERSION=$(grep '! npm version' /tmp/build.log | awk '{ print $4 }')
+      - grep -q 'Command failed with exit code' /tmp/build.log && exit 1 || true
+      - VERSION=$(grep -A1 Changelog /tmp/build.log | tail -n 1 | cut -d'[' -f2 | cut -d']' -f1)
       - NPM_VERSION=$(npm show @chargebee/react-native-chargebee version)
       - echo $NPM_VERSION | grep -q $VERSION || { echo "Version between Build and NPM not matched" ; exit 1 ; }
     finally:
