--- a/build-config/buildspec-prod.yml
+++ b/build-config/buildspec-prod.yml
@@ -18,7 +18,7 @@ phases:
       - echo "Installing yarn Packages..."
       - yarn bootstrap
       - echo "Yarn build and publishing to NPM"
-      - npm run release -- --no-git --no-github.release --ci >>/tmp/build.log 2>&1
+      - npm run release -- --no-git --no-github.release --ci >>/tmp/build.log 2>&1 || { cat /tmp/build.log ; exit 1 ; }
       - VERSION=$(grep -A1 Changelog /tmp/build.log | tail -n 1 | cut -d'[' -f2 | cut -d']' -f1)
       - NPM_VERSION=$(npm show @chargebee/react-native-chargebee version)
       - echo $NPM_VERSION | grep -q $VERSION || { echo "Version between Build and NPM not matched" ; exit 1 ; }
