chore : HB | Build Error.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/jest": "^26.0.0",
+    "@types/lodash": "^4.14.155",
     "@types/react": "^16.9.19",
     "@types/react-native": "0.62.0",
     "commitlint": "^8.3.5",
@@ -55,15 +56,14 @@
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "lodash": "^4.17.15",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "16.11.0",
     "react-native": "0.62.0",
-    "release-it": "^13.5.8",
-    "typescript": "^3.8.3",
     "react-native-webview": "~8.1.1",
-    "@types/lodash": "^4.14.155",
-    "lodash": "^4.17.15"
+    "release-it": "^13.5.8",
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "*",
@@ -147,7 +147,6 @@
     ]
   },
   "dependencies": {
-    "lodash": "^4.17.15",
-    "react-native-base64": "^0.2.1"
+    "lodash": "^4.17.15"
   }
 }
