--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "chargebee-react-native": ["./src/index"]
+      "@chargebee/react-native-chargebee": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
