chore: adds native sdks as dependencies

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,5 @@ ChargebeeReactNative_minSdkVersion=21
 ChargebeeReactNative_targetSdkVersion=31
 ChargebeeReactNative_compileSdkVersion=31
 ChargebeeReactNative_ndkversion=21.4.7075529
+
+newArchEnabled=true
