--- a/android/build.gradle
+++ b/android/build.gradle
@@ -84,6 +84,7 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation 'com.chargebee:chargebee-android:1.0.14'
 }
 
 if (isNewArchitectureEnabled()) {
