--- a/example/package.json
+++ b/example/package.json
@@ -9,6 +9,7 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
+    "@chargebee/react-native-chargebee": "../.",
     "react": "18.2.0",
     "react-native": "0.71.0"
   },
@@ -16,7 +17,7 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.14.0",
     "@babel/runtime": "^7.12.5",
-    "metro-react-native-babel-preset": "0.73.5",
-    "babel-plugin-module-resolver": "^4.1.0"
+    "babel-plugin-module-resolver": "^4.1.0",
+    "metro-react-native-babel-preset": "0.73.5"
   }
 }
