chore: updates precommit lefthook to check for only staged files

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,7 @@ pre-commit:
   parallel: true
   commands:
     lint:
-      files: git diff --name-only @{push}
+      files: git diff --name-only --staged @{push}
       glob: "*.{js,ts,jsx,tsx}"
       run: npx eslint {files}
     types:
