chore: updates dependencies

--- a/package.json
+++ b/package.json
@@ -54,13 +54,16 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@evilmartians/lefthook": "^1.2.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@evilmartians/lefthook": "^1.2.2",
     "@react-native-community/eslint-config": "^3.0.2",
+    "@react-native/codegen": "^0.72.1",
     "@release-it/conventional-changelog": "^5.0.0",
-    "@types/jest": "^28.1.2",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^28.1.8",
     "@types/react": "~17.0.21",
     "@types/react-native": "0.70.0",
+    "@types/react-test-renderer": "^18.0.0",
     "commitlint": "^17.0.2",
     "del-cli": "^5.0.0",
     "eslint": "^8.4.1",
@@ -73,7 +76,7 @@
     "react-native": "0.71.0",
     "react-native-builder-bob": "^0.20.3",
     "release-it": "^15.0.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "@types/react": "17.0.21"
@@ -170,5 +173,4 @@
       "javaPackageName": "com.chargebee.android"
     }
   }
-
 }
