test: adds rn test for retrieve product identifiers

--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
       "<rootDir>/lib/"
     ],
     "setupFiles": [
-      "./src/__mocks__/setupJest.js"
+      "./src/__mocks__/setupJest.ts"
     ]
   },
   "commitlint": {
