--- a/android/build.gradle
+++ b/android/build.gradle
@@ -86,6 +86,7 @@ dependencies {
   implementation "com.facebook.react:react-native"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
   implementation 'com.chargebee:chargebee-android:1.0.14'
+  implementation 'com.android.billingclient:billing-ktx:5.1.0'
 }
 
 if (isNewArchitectureEnabled()) {
