--- a/example/package.json
+++ b/example/package.json
@@ -17,15 +17,16 @@
     "@ui-kitten/components": "^5.1.2",
     "react": "18.2.0",
     "react-native": "0.71.0",
-    "react-native-svg": "^13.8.0",
-    "react-native-screens": "3.20.0",
     "react-native-gesture-handler": "2.9.0",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "3.20.0",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.14.0",
     "@babel/runtime": "^7.12.5",
+    "@ui-kitten/metro-config": "^5.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "0.73.5"
   }
