--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Source
+        uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Yarn Install
+      - name: Install dependencies
         run: yarn install
       - name: Yarn Tests
         run: yarn test
