ci: adds github workflow for release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release to NPM and Github
 on: 
   pull_request:
     branches:
-      - "release-prep-temp" 
+      - release-prep-temp
 jobs:
   release:
     runs-on: ubuntu-latest
