--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+          ref: release-test
       - name: Initialize Git Config
         run: |
           git config user.name "${GITHUB_ACTOR}"
