--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,11 @@ on:
   pull_request:
     branches:
       - release-prep-temp
+  workflow_dispatch:
+    inputs:
+      pre-release-type:
+        description: 'Release type (one of): alpha, beta, rc'
+        required: true
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -37,10 +42,19 @@ jobs:
             npm config set //hptest.jfrog.io/artifactory/api/npm/npm/:_authToken=$NPM_TOKEN
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: Release package
-        run: yarn release --ci
+      - name: PreRelease package
+        if: "contains(fromJSON('["alpha", "beta", "rc"]'), github.event.inputs.pre-release-type)"
+        run: yarn release --ci --preRelease=$RELEASE_TYPE --dry-run 
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_TYPE: ${{ github.event.inputs.release-type }}
+      - name: Release package
+        if: "!contains(fromJSON('["alpha", "beta", "rc"]'), github.event.inputs.pre-release-type)"
+        run: yarn release --ci --preRelease=$RELEASE_TYPE --dry-run 
+        env: 
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          RELEASE_TYPE: ${{ github.event.inputs.release-type }}
       
       
