ci: adds github workflow for release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,18 +43,15 @@ jobs:
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Pre-Release package
-        if: "contains(fromJSON('["alpha", "beta", "rc"]'), github.event.inputs.pre-release-type)"
+        if: contains(github.event.inputs.pre-release-type, "alpha")
         run: yarn release --ci --preRelease=$RELEASE_TYPE --dry-run 
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_TYPE: ${{ github.event.inputs.release-type }}
       - name: Release package
-        if: "!contains(fromJSON('["alpha", "beta", "rc"]'), github.event.inputs.pre-release-type)"
-        run: yarn release --ci --preRelease=$RELEASE_TYPE --dry-run 
+        if: "!contains(github.event.inputs.pre-release-type, 'alpha')"
+        run: yarn release --ci --dry-run 
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          RELEASE_TYPE: ${{ github.event.inputs.release-type }}
-      
-      
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
