--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_TYPE: ${{ github.event.inputs.release-type }}
       - name: Release package
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/release-prep-temp'
         run: yarn release --ci --dry-run 
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
