--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
             npm config set registry https://hptest.jfrog.io/artifactory/api/npm/npm/
             npm config set //hptest.jfrog.io/artifactory/api/npm/npm/:_authToken=$NPM_TOKEN
-            echo github.ref ${GITHUB_REF}
+            echo github.ref ${GITHUB_REF_NAME}
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Pre-Release package
