--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,5 @@
 name: Release to NPM and Github
 on: 
-  ## Remove for merge
-  pull_request:
-    branches:
-      - release-prep-temp
   workflow_run:
     workflows: Build React Native
     branches: [master, next]
@@ -41,7 +37,6 @@ jobs:
         run: |
             npm config set registry https://hptest.jfrog.io/artifactory/api/npm/npm/
             npm config set //hptest.jfrog.io/artifactory/api/npm/npm/:_authToken=$NPM_TOKEN
-            echo github.ref ${GITHUB_REF_NAME}
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Pre-Release package
@@ -52,7 +47,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           RELEASE_TYPE: ${{ github.event.inputs.release-type }}
       - name: Release package
-        if: github.ref == 'refs/heads/release-prep-temp'
+        if: github.ref == 'refs/heads/master'
         run: yarn release --ci --dry-run 
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
