--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,9 @@
 name: Release to NPM and Github
 on: 
-  workflow_run:
-    workflows: Build React Native
-    branches: [master, next]
-    types: completed
+  push:
+    branches: 
+      - master
+      - next
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -39,6 +39,8 @@ jobs:
             npm config set //hptest.jfrog.io/artifactory/api/npm/npm/:_authToken=$NPM_TOKEN
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Yarn Tests
+        run: yarn test
       - name: Pre-Release package
         if: github.ref == 'refs/heads/next'
         run: yarn release --ci --preRelease=beta --dry-run 
