--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release to NPM and Github
 on: 
   push:
     branches: 
-      - master
+      - master-temp
       - next
 jobs:
   release:
@@ -48,7 +48,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release package
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master-temp'
         run: yarn release --ci
         env: 
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
