build: adds github action for release

--- a/package.json
+++ b/package.json
@@ -106,8 +106,12 @@
   },
   "release-it": {
     "git": {
+      "requiredBranch": ["master-temp", "next"],
       "commitMessage": "chore: release ${version}",
       "tagName": "v${version}"
+    },
+    "hooks": {
+      "after:bump": "npx auto-changelog -p"
     },
     "npm": {
       "publish": true
@@ -117,7 +121,8 @@
     },
     "plugins": {
       "@release-it/conventional-changelog": {
-        "preset": "angular"
+        "preset": "angular",
+        "infile": "CHANGELOG.md"
       }
     }
   },
