--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,8 +34,10 @@ jobs:
         run: yarn install
       - name: Initialize NPM config
         run: |
-            npm config set registry https://registry.npmjs.com/ 
+            npm config set registry=https://registry.npmjs.com/
             npm config set //registry.npmjs.com/:_authToken=$NPM_TOKEN
+            npm whoami
+            npm config list
         env: 
           NPM_TOKEN: ${{ secrets.RN_SDK_NPM_WRITE_TOKEN }}
       - name: Yarn Tests
