build: updates release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,9 @@ jobs:
         run: |
             npm config set registry=https://registry.npmjs.com/
             npm config set //registry.npmjs.com/:_authToken=$NPM_TOKEN
+            echo "whoami"
             npm whoami
+            echo "config"
             npm config list
         env: 
           NPM_TOKEN: ${{ secrets.RN_SDK_NPM_WRITE_TOKEN }}
@@ -44,7 +46,10 @@ jobs:
         run: yarn test
       - name: Pre-Release package
         if: github.ref == 'refs/heads/next'
-        run: yarn release --ci --preRelease=beta --dry-run
+        run: |
+          echo "whoami"
+          npm whoami
+          npm run release --ci --preRelease=beta --dry-run
         env: 
           NPM_TOKEN: ${{ secrets.RN_SDK_NPM_WRITE_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
