--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,10 @@ jobs:
         run: |
           echo "whoami"
           npm whoami
-          npm run release --ci --preRelease=beta --dry-run
+          echo "config"
+          npm config list
+          echo "release"
+          npm run release --ci --preRelease=beta --dry-run --verbose
         env: 
           NPM_TOKEN: ${{ secrets.RN_SDK_NPM_WRITE_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
