--- a/package.json
+++ b/package.json
@@ -104,8 +104,15 @@
   "release-it": {
     "git": {
       "requiredBranch": ["master", "next"],
-      "commitMessage": "chore: release ${version}",
-      "tagName": "v${version}"
+      "commitMessage": "chore: release ${version} [skip ci]",
+      "tagName": "v${version}",
+      "push": false
+    },
+    "hooks": {
+      "after:git:afterRelease": [
+        "git checkout -b docs-v${version}",
+        "git push origin docs-v${version}"
+      ]
     },
     "npm": {
       "publish": true
