--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chargebee/react-native-chargebee",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-beta.3",
   "description": "Package for Chargebee In-App Purchases",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -103,7 +103,10 @@
   },
   "release-it": {
     "git": {
-      "requiredBranch": ["master", "next"],
+      "requiredBranch": [
+        "master",
+        "next"
+      ],
       "commitMessage": "chore: release ${version} [skip ci]",
       "tagName": "v${version}",
       "push": false
