build: updates release and package files to make github releases as optional

--- a/package.json
+++ b/package.json
@@ -114,15 +114,15 @@
     "hooks": {
       "after:git:afterRelease": [
         "git checkout -b docs-v${version}",
-        "git push origin docs-v${version}",
-        "git push origin v${version}"
+        "git push origin docs-v${version}"
       ]
     },
     "npm": {
       "publish": true
     },
     "github": {
-      "release": true
+      "release": true,
+      "draft": true
     },
     "plugins": {
       "@release-it/conventional-changelog": {
