build: updates gitflow file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
       - name: Cache node modules
         id: cache-nodemodules
         uses: actions/cache@v2
