--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
       - name: Initialize Git Config
         run: |
           git config user.name "${GITHUB_ACTOR}"
