--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ on:
     branches: 
       - master
       - next
+    paths-ignore:
+      - 'CHANGELOG.md'
+      - 'package-lock.json'
+      - 'package.json'
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -13,6 +17,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: Enable Corepack before setting up Node
+        run: corepack enable
       - name: Initialize Git Config
         run: |
           git config user.name "${GITHUB_ACTOR}"
@@ -49,7 +55,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release package
         if: github.ref == 'refs/heads/master'
-        run: npm run release -- --ci -VV
+        run: npm run release -- --ci --dry-run -VV 
         env: 
           NPM_TOKEN: ${{ secrets.RN_SDK_NPM_WRITE_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  
